<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth"
    android:focusableInTouchMode="true">

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:alpha="0.85"
        android:background="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="create new account "
                    android:textAlignment="center"
                    android:textColor="@color/colorGoldenTextDark"
                    android:textSize="@dimen/font_intro_welcome_get_started" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_inputs"
            android:layout_marginStart="@dimen/margin_inputs"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhiteText"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:drawableStart="@drawable/email"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/paddingBottomInput" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhiteText"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:drawableStart="@drawable/user"
                    android:hint="@string/user_name"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/paddingBottomInput" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhiteText"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:drawableStart="@drawable/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/paddingBottomInput" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhiteText"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:drawableStart="@drawable/password"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/paddingBottomInput" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/margin_inputs"
                android:layout_marginStart="@dimen/margin_inputs"
                android:layout_weight="0.6">

                <com.unstoppable.submitbuttonview.SubmitButton
                    android:id="@+id/login_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    app:buttonColor="@color/colorGolden"
                    app:buttonText="@string/register"
                    app:buttonTextSize="@dimen/buttonTextSize" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:clickable="true"
            android:onClick="onClickSignIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/already_have_account"
                android:textAlignment="center"
                android:textColor="@color/colorWhiteText" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>